test/corpus/raw_text_elements.txt
================================================================================
script - empty
================================================================================
<script></script>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (end_tag (tag_name))))

================================================================================
script - with content
================================================================================
<script>console.log("hello");</script>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
script - with HTML-like content (not parsed as HTML)
================================================================================
<script>var x = "<div>Not HTML</div>";</script>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
script - with attributes
================================================================================
<script src="app.js" async defer></script>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (attribute_value))
      (attribute (attribute_name))
      (attribute (attribute_name)))
    (end_tag (tag_name))))

================================================================================
script - with type attribute
================================================================================
<script type="application/json">{"key": "value"}</script>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (attribute_value)))
    (text)
    (end_tag (tag_name))))

================================================================================
script - multiline content
================================================================================
<script>
  function hello() {
    return "world";
  }
</script>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
script - content with </script in string
================================================================================
<script>var s = "</scrip";</script>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
style - empty
================================================================================
<style></style>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (end_tag (tag_name))))

================================================================================
style - with content
================================================================================
<style>.foo { color: red; }</style>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
style - with attributes
================================================================================
<style type="text/css" media="screen">.foo { color: red; }</style>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (attribute_value))
      (attribute (attribute_name) (attribute_value)))
    (text)
    (end_tag (tag_name))))

================================================================================
style - multiline content
================================================================================
<style>
  body {
    margin: 0;
    padding: 0;
  }
  .container {
    max-width: 1200px;
  }
</style>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
style - with HTML-like content
================================================================================
<style>div > p { color: blue; }</style>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
script - case insensitive end tag
================================================================================
<script>code</SCRIPT>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
style - case insensitive end tag
================================================================================
<style>.foo{}</STYLE>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
script and style together
================================================================================
<style>.red { color: red; }</style>
<script>document.body.classList.add("red");</script>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name)))
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))
