test/corpus/self_closing_tags.txt
================================================================================
self-closing - svg element
================================================================================
<svg/>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))))

================================================================================
self-closing - svg child element
================================================================================
<svg>
  <rect/>
</svg>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (element
      (start_tag (tag_name)))
    (end_tag (tag_name))))

================================================================================
self-closing - svg with attributes
================================================================================
<svg width="100" height="100"/>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (attribute_value))
      (attribute (attribute_name) (attribute_value)))))

================================================================================
self-closing - math element
================================================================================
<math/>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))))

================================================================================
self-closing - svg circle
================================================================================
<svg><circle cx="50" cy="50" r="25"/></svg>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (element
      (start_tag
        (tag_name)
        (attribute (attribute_name) (attribute_value))
        (attribute (attribute_name) (attribute_value))
        (attribute (attribute_name) (attribute_value))))
    (end_tag (tag_name))))

================================================================================
self-closing - svg line
================================================================================
<svg><line x1="0" y1="0" x2="100" y2="100"/></svg>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (element
      (start_tag
        (tag_name)
        (attribute (attribute_name) (attribute_value))
        (attribute (attribute_name) (attribute_value))
        (attribute (attribute_name) (attribute_value))
        (attribute (attribute_name) (attribute_value))))
    (end_tag (tag_name))))

================================================================================
self-closing - svg polygon
================================================================================
<svg><polygon points="0,0 50,50 100,0"/></svg>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (element
      (start_tag
        (tag_name)
        (attribute (attribute_name) (attribute_value))))
    (end_tag (tag_name))))

================================================================================
self-closing - svg polyline
================================================================================
<svg><polyline points="0,0 50,50 100,0"/></svg>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (element
      (start_tag
        (tag_name)
        (attribute (attribute_name) (attribute_value))))
    (end_tag (tag_name))))

================================================================================
self-closing - multiple svg elements
================================================================================
<svg>
  <circle cx="25" cy="25" r="20"/>
  <rect x="50" y="50" width="40" height="40"/>
</svg>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (element
      (start_tag
        (tag_name)
        (attribute (attribute_name) (attribute_value))
        (attribute (attribute_name) (attribute_value))
        (attribute (attribute_name) (attribute_value))))
    (element
      (start_tag
        (tag_name)
        (attribute (attribute_name) (attribute_value))
        (attribute (attribute_name) (attribute_value))
        (attribute (attribute_name) (attribute_value))
        (attribute (attribute_name) (attribute_value))))
    (end_tag (tag_name))))

================================================================================
self-closing - svg use element
================================================================================
<svg><use href="#myShape"/></svg>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (element
      (start_tag
        (tag_name)
        (attribute (attribute_name) (attribute_value))))
    (end_tag (tag_name))))

================================================================================
self-closing - svg image
================================================================================
<svg><image href="image.png" width="100" height="100"/></svg>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (element
      (start_tag
        (tag_name)
        (attribute (attribute_name) (attribute_value))
        (attribute (attribute_name) (attribute_value))
        (attribute (attribute_name) (attribute_value))))
    (end_tag (tag_name))))
